﻿##########################################
官方网站：https://www.pbootcms.com
标签手册：https://www.pbootcms.com/docs.html
版权所有：湖南翱云网络科技有限公司
##########################################

PbootCMS V1.3.9 build 2019-05-15
1、优化相关目录权限不足报错机制；
2、修复PHP56有时后台更新无法使用问题；
3、优化后台在线升级功能；
4、新增中文路径部署检测；
5、优化升级系统框架模板引擎；
6、新增自定义路由正则匹配的支持；
7、新增后台配置数字分页条数量；
8、其他问题修复与优化；

PbootCMS V1.3.8 build 2019-04-12
1、新增同时支持fsockopen及stream_socket_client发送邮件；
2、优化邮件发送失败错误提示信息；
3、新增手机版绑定域名后自动跳转到对应域名地址上；
4、修改会话文件默认为使用系统环境缓存路径；
5、修复mysqli配置文件读取端口不一致问题；
6、修复tags为空时仍然会输出代码字符问题；
7、修复开启缓存功能后异样地址会导致文件产生问题；
8、修复编辑器在PHP7下多图上传名字重复问题；
9、修复编辑器多图上传位置错乱问题；

PbootCMS V1.3.7 build 2019-03-12
1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
2、修复搜索时表单传递字段控制被过滤掉的问题；
3、新增多个搜索通过传递searchtpl字段自定义不同搜索结果页模板；
4、修复分享非默认语言链接后无法直接访问问题；
5、新增跨语言调用内容及列表的支持；
6、新增留言使用lg=*调取指定语言留言记录功能；
7、新增order=random调取随机排序内容列表；
8、修复上传图片字段使用网络图片时地址错误问题；
9、修复栏目seo标题使用自动标题时不显示问题；

PbootCMS V1.3.6 build 2019-01-12
1、框架问题修复与优化;
2、优化后台在线升级功能;
3、修复api内容列表无法传递自定义排序问题;
4、去除后台执行sql语句功能;
5、新增超级管理员清空日志功能；
6、修复测试邮件发送失败返回中文乱码的问题;

PbootCMS V1.3.5 build 2018-12-24
1、修复邮件测试功能被误拦截问题;
2、修复使用首页分页与筛选时出现两种链接类型问题;
3、修复编辑器工具栏不能正常浮动到顶部及视频插入问题;
4、修复gif不能正常缩放及png透明图片缩放后背景变黑问题;
5、新增内容截取时使用more='*'设置省略号内容;
6、新增调节参数maxwidth、maxheight、height、width对图片进行处理;
7、进一步加强系统入侵防御能力;
8、后台主页、验证码、上传、默认模板等的改进与优化;
9、其他问题修复与优化;

PbootCMS V1.3.3 build 2018-11-29
1、新增sort指定栏目输出支持后台排序规则;
2、修复PHP7.3环境下的一些兼容性问题;
3、修改自定义表单数据调用列表为formlist标签，避免标签冲突问题;
4、修复多个列表的页面筛选对非筛选列表干扰问题;
5、修复if判断详情内容是否为空无效问题;
6、修复自定义字段英文单词之间空格被过滤掉的问题;
7、修复一处可能导致恶意利用的漏洞（重要）;
8、进一步增强系统框架安全防御策略;
9、验证码加入英文字母增强复杂度;

PbootCMS V1.3.2 build 2018-11-22
1、修复用户名验证规则不统一导致修改特殊字符后无法登录问题;
2、修复js无法获取到点赞及反对cookie的问题;
3、修复content标签无法使用scode调取单页问题;
4、新增start=*设置数据列表起始数据;
5、加强后台执行数据库脚本功能的安全性;
6、新增默认正文内容不再对PB标签进行解析;
7、修复上版本API搜索接口无法正常实现功能的问题;
8、新增lencn=* 截取长度,解决中英文显示长度不同问题;
9、其他问题修复与优化。

PbootCMS V1.3.1 build 2018-11-14
1、优化在线升级功能;
2、修复表单Ajax提交返回状态码不正确问题;
3、优化会话层级目录创建，避免会话目录缺失导致登录失败的情况;

PbootCMS V1.3.0 build 2018-11-12
1、优化会话创建机制,避免会话文件过多问题;