@@ -1,13 +1,13 @@
 <?php
 return array(
     // 应用版本
-    'app_version' => '1.3.9',
+    'app_version' => '1.4.0',
     
     // 发布时间
-    'release_time' => '20190515',
+    'release_time' => '20190607',
     
     // 修订版本
-    'revise_version' => '3'
+    'revise_version' => '0'
 
 );
  
