@@ -1,0 +1,12 @@
+<IfModule mod_rewrite.c>
+  Options +FollowSymlinks
+  RewriteEngine On
+  
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-f
+  
+  #如果页面出现"No input file specified." 请注释第一条，启用第二条
+  RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
+  #RewriteRule ^(.*)$ index.php [E=PATH_INFO:$1,QSA,PT,L]  
+  
+</IfModule>
