@@ -4,6 +4,12 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.0 build 2019-06-07
+1、修复部分浏览器多图无法删除的问题；
+2、新增万能授权码填写后自动后台隐藏功能；
+3、修复QQ中打开搜索页面附加参数导致错误问题；
+4、修复后台密码泄露后系统配置可能构成的安全问题；
+
 PbootCMS V1.3.9 build 2019-05-15
 1、优化相关目录权限不足报错机制；
 2、修复PHP56有时后台更新无法使用问题；
